# ControLana

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/app/: app.py
src/componentes/: acerca_de.py  donaciones.py  grafica_rubros_totales.py  grafica_totales.py  menu_graficas.py  mostrar_historial.py  privacidad.py
src/controladores/: control_acceso.py  validadores.py
src/datos/: admin_control.py  eliminar_control.py  manejo_datos.py
src/vistas/: vista_control.py  vista_dialog_crear_control.py  vista_home.py
src/vistas_base/: base_vista_dialogos.py
