[project]
name = "controlana"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.1",
    "flet-charts>=0.80.1",
    "matplotlib>=3.10.8"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.mycompany"
product = "controlana"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"


[tool.flet.app]
path = "src"










